# Smart-Drone-Fleet

./: CMakeLists.txt  README.md
include/: Camera.h  Drone.h  DroneController.h  Quadcopter.h  Sensor.h  TelemetryData.h
src/drone_controller/: DroneController.cpp  Quadcopter.cpp  main.cpp
src/telemetry/: TelemetryData.cpp
src/vision/: Camera.cpp
